--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="kotak">
 		<div class="header">
-			Vegetarian
+			<div class=logo>Vegetarian</div>
 			<div class=menu>About</div>
 			<div class=menu>Places</div>
 			<div class=menu>Foods</div>
@@ -14,27 +14,27 @@
 		</div>
 		</div>
 		<div class="gambar">
-		<img src="image/veg1.jpg" width="100%" height="500px">
+			<img src="image/veg1.jpg" width="100%" height="500px">
 		</div>
 		<div class="isi">
 			<p>Vegetarian adalah sebutan bagi orang yang hanya makan tumbuh-tumbuhan dan tidak mengonsumsi makanan yang berasal dari makhluk hidup seperti daging dan unggas, namun masih mungkin mengonsumsi makanan laut seperti ikan, atau produk olahan hewan seperti telur, keju, atau susu.</p><br>
 			<div class="kolom"><img src="image/lacto.jpg" alt="lacto" title="lacto" width="100%" height="100%">
-				<div class="caption"><h3>Lacto</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
+				<div class="caption"><h3>Lacto Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 			</div>
 			<div class="kolom"><img src="image/ovo2.png" width="100%" height="100%">
-				<div class="caption"><h3>Lacto</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
+				<div class="caption"><h3>Ovo Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 			</div>
 			<div class="kolom"><img src="image/fish.jpg" width="100%" height="100%">
-				<div class="caption"><h3>Lacto</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
+				<div class="caption"><h3>Pasto Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 			</div>
 			<div class="kolom"><img src="image/veget1.jpg" width="100%" height="100%">
-				<div class="caption"><h3>Lacto</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
+				<div class="caption"><h3>Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 			</div>
 			<div class="kolom"><img src="image/vegan.jpg" width="100%" height="100%"><p>HAllo
-				<div class="caption"><h3>Lacto</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
+				<div class="caption"><h3>Vegan</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 			</div>
-			<div class="kolom"><img src="image/semi.jpg" width="100%" height="100%">
-				<div class="caption"><h3>Lacto</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
+			<div class="kolom"><img src="image/fruit.jpg" width="100%" height="100%">
+				<div class="caption"><h3>Frutarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 			</div>
 			
 		</div>
