--- a/css/index.html
+++ b/css/index.html
@@ -156,6 +156,12 @@ body							{
 								font-family:Times New Roman;
 								padding-top:30px;
 								}
+@media kotak and (min-width:481px) {
+		width:480px;
+		}
+@media isi and (min-height:801px) {
+		height:1200px;
+		}
 
 		</style>
 	</head>
