--- a/css/index.html
+++ b/css/index.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
 		<title>Vegetarian</title>
+		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<style>
 body							{
 								font-family:arial;
 								margin:0px 0px 0px 0px;
-								padding:0px;
 								background-color: #cccccc;
 								}
 .menu							{
@@ -156,12 +156,24 @@ body							{
 								font-family:Times New Roman;
 								padding-top:30px;
 								}
-@media kotak and (min-width:481px) {
-		width:480px;
+@media screen and (min-width: 480px) {
+   .kotak{
+		padding-left:10px;
+		width:100%;
+		
 		}
-@media isi and (min-height:801px) {
-		height:1200px;
+	.logo{
+	width:160px;
+	}
+	.menu{
+		padding-left:10px;
+		font-size:20px;
+		width:69px;
 		}
+	.header{
+	width:460px;
+	}
+}
 
 		</style>
 	</head>
