--- a/css/index.html
+++ b/css/index.html
@@ -161,17 +161,26 @@ body							{
 		padding-left:10px;
 		width:100%;
 		
-		}
+	}
 	.logo{
-	width:160px;
+		width:160px;
 	}
 	.menu{
 		padding-left:10px;
 		font-size:20px;
 		width:69px;
-		}
+	}
 	.header{
-	width:460px;
+		width:460px;
+	}
+	.gambar{
+		margin-left:10px;
+	}
+	.isi{
+		margin-left:10px;
+	}
+	.footer{
+		width:;
 	}
 }
 
