--- a/css/index.html
+++ b/css/index.html
@@ -73,7 +73,7 @@ body							{
 								margin-left:56px;
 								width:250px;
 								height:280px;
-								border:2px solid white;
+								border:2px solid black;
 								cursor:pointer;
 								overflow:hidden;
 								float:left;
@@ -139,7 +139,9 @@ body							{
 								position:relative;
 								left:100%;
 								}
-.kolom:hover h3, .kolom:hover p	{left:0;}
+.kolom:hover h3, .kolom:hover p	{
+								left:0;
+								}
 .caption						{
 								padding:10px 10px 10px 10px;
 								margin-top:20px;
@@ -156,33 +158,41 @@ body							{
 								font-family:Times New Roman;
 								padding-top:30px;
 								}
-@media screen and (min-width: 480px) {
-   .kotak{
+@media screen and (max-width: 480px) {
+	.kotak{
 		padding-left:5px;
-		width:100%;
-		
-	}
-	.logo{
-		width:160px;
-	}
-	.menu{
-		padding-left:10px;
-		font-size:20px;
-		width:69px;
 	}
 	.header{
-		width:460px;
+		width:97%;
 	}
-	
-	
+	.menu{
+		width:75px;
+		transition:background 0s;
+	}
 	.gambar{
 		margin-left:10px;
+		width:455px;
+		height:300px;
 	}
 	.isi{
 		margin-left:10px;
+		width:455px;
+		height:930px;
+		padding-left:20px;
+		padding-right:20px;
+	}
+	.kolom{
+		width:170px;
+		height:200px;
+		margin-left:25px;
+		margin-top:15px;
 	}
 	.footer{
-		width:;
+		margin-left:10px;
+		width:455px;
+	}
+	.caption p{
+	display:none;
 	}
 }
 
@@ -206,7 +216,7 @@ body							{
 		<div class="row">
 			<div class="col-md-12">
 				<div class="gambar">
-					<img src="image/veg1.jpg" width="100%" height="500px">
+					<img src="image/veg1.jpg" width="100%" height="100%">
 				</div>
 				<div class="isi">
 					<p>Vegetarian adalah sebutan bagi orang yang hanya makan tumbuh-tumbuhan dan tidak mengonsumsi makanan yang berasal dari makhluk hidup seperti daging dan unggas, namun masih mungkin mengonsumsi makanan laut seperti ikan, atau produk olahan hewan seperti telur, keju, atau susu.</p><br>
