--- a/css/index.html
+++ b/css/index.html
@@ -161,22 +161,25 @@ body							{
 @media screen and (max-width: 480px) {
 	.kotak{
 		padding-left:5px;
+		position:static;
+		width:490px;
 	}
 	.header{
 		width:97%;
+		position:static;
 	}
 	.menu{
 		width:75px;
 		transition:background 0s;
 	}
 	.gambar{
-		margin-left:10px;
-		width:455px;
+		margin-left:5px;
+		width:450px;
 		height:300px;
 	}
 	.isi{
-		margin-left:10px;
-		width:455px;
+		margin-left:5px;
+		width:450px;
 		height:930px;
 		padding-left:20px;
 		padding-right:20px;
@@ -192,7 +195,7 @@ body							{
 		width:455px;
 	}
 	.caption p{
-	display:none;
+		display:none;
 	}
 }
 
