--- a/css/index.html
+++ b/css/index.html
@@ -172,6 +172,9 @@ body							{
 		width:75px;
 		transition:background 0s;
 	}
+	.logo{
+		font-size:20px;
+	}
 	.gambar{
 		margin-left:5px;
 		width:450px;
@@ -191,7 +194,7 @@ body							{
 		margin-top:15px;
 	}
 	.footer{
-		margin-left:10px;
+		margin-left:5px;
 		width:455px;
 	}
 	.caption p{
