--- a/css/index.html
+++ b/css/index.html
@@ -165,7 +165,7 @@ body							{
 		width:490px;
 	}
 	.header{
-		width:97%;
+		width:475px;
 		position:static;
 	}
 	.menu{
@@ -173,15 +173,15 @@ body							{
 		transition:background 0s;
 	}
 	.logo{
-		font-size:20px;
+		font-size:40px;
 	}
 	.gambar{
-		margin-left:5px;
+		margin-left:3px;
 		width:450px;
 		height:300px;
 	}
 	.isi{
-		margin-left:5px;
+		margin-left:3px;
 		width:450px;
 		height:930px;
 		padding-left:20px;
@@ -194,7 +194,7 @@ body							{
 		margin-top:15px;
 	}
 	.footer{
-		margin-left:5px;
+		margin-left:3px;
 		width:455px;
 	}
 	.caption p{
