--- a/css/index.html
+++ b/css/index.html
@@ -2,207 +2,7 @@
 	<head>
 		<title>Vegetarian</title>
 		<meta name="viewport" content="width=device-width" />
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<style>
-body							{
-								font-family:arial;
-								margin:0px 0px 0px 0px;
-								background-color: #cccccc;
-								}
-.menu							{
-								text-align: center;
-								float:right;
-								width:100px;
-								height:300%;
-								font-size:20px;
-								transition:background 2s;
-								border:0px solid white;
-								padding-top:10px;
-								cursor:pointer;
-								}
-.menu:hover						{
-								background:#B8AEAE;
-								}
-.kotak							{
-								width:100%;
-								height:65px;
-								border:1px solid black;
-								background:#323232;
-								position:fixed;
-								padding-left:100px;
-								z-index:1;
-								}
-.logo							{
-								float:left;
-								width:100px;
-								cursor:pointer;
-								}
-
-.header							{
-								font-family:Times New Roman;
-								font-size:35px;
-								color:white;
-								background:#323232;
-								position:fixed;
-								padding-left:10px;
-								padding-top:10px;
-								padding-bottom:10px;
-								width:84%;
-								height:35px;
-								}
-.isi							{
-								font-family:arial;
-								background:#F7F3E8;
-								color:#000000;
-								font-size:20px;
-								padding-top:30px;
-								padding-left:70px;
-								padding-right:70px;
-								margin-left:100px;
-								width:87%;
-								height:800px;
-								border:1px solid black;
-								}
-.gambar							{
-								width:87%;
-								margin-left:100px;
-								border:1px solid black;
-								}
-.kolom							{
-								margin-top:30px;
-								margin-left:56px;
-								width:250px;
-								height:280px;
-								border:2px solid black;
-								cursor:pointer;
-								overflow:hidden;
-								float:left;
-								position:relative;
-								}
-.kolom:hover .caption			{
-								opacity:0.9;
-								top:0;
-								}
-.kolom img						{
-								transition:1.5s;
-								-moz-transition:1.5s;
-								-webkit-transition:1.5s;
-								-o-transition:1.5s;
-								-ms-transition:1.5s;
-								}
-.kolom:hover img 				{
-								transform:scale(1.1);
-								-moz-transform:scale(1.1);
-								-webkit-transform:scale(1.1);
-								-o-transform:scale(1.1);
-								-ms-transform:scale(1.1);
-								}
-.caption						{
-								transition:all .4s ease-in;
-								transition-delay:.5s;
-								-moz-transition-delay:.5s;
-								-webkit-transition-delay:.5s;
-								-o-transition-delay:.5s;
-								-ms-transition-delay:.5s;
-								opacity:0;
-								position:absolute;
-								top:-100%;
-								width:100%;
-								height:100%;
-								background-color:rgba(0,0,0,4);
-								color:white;
-								font-family:arial;
-								}
-.caption p						{
-								transition-delay:1.2s;
-								-moz-transition-delay:1.2s;
-								-webkit-transition-delay:1.2s;
-								-o-transition-delay:1.2s;
-								-ms-transition-delay:1.2s;
-								}
-.caption h3						{
-								transition-delay:1s;
-								-moz-transition-delay:1s;
-								-webkit-transition-delay:1s;
-								-o-transition-delay:1s;
-								-ms-transition-delay:1s;
-								}
-.caption h3, .caption p 			{
-								transition:all .4s;
-								-moz-transition:all .4s;
-								-webkit-transition:all .4s;
-								-o-transition:all .4s;
-								-ms-transition:all .4s;
-								padding:20px 20px 10px 10px;
-								margin-top:0px;
-								margin-bottom:0px;
-								position:relative;
-								left:100%;
-								}
-.kolom:hover h3, .kolom:hover p	{
-								left:0;
-								}
-.caption						{
-								padding:10px 10px 10px 10px;
-								margin-top:20px;
-								background-color:black;
-								}
-.footer							{
-								margin-left:100px;
-								width:87%;
-								height:50px;
-								border:1px solid black;
-								color:white;
-								background:#323232;
-								text-align:center;
-								font-family:Times New Roman;
-								padding-top:30px;
-								}
-@media screen and (max-width: 480px) {
-	.kotak{
-		padding-left:5px;
-		position:static;
-		width:480px;
-	}
-	.header{
-		width:470px;
-		position:static;
-	}
-	.menu{
-		width:75px;
-		transition:background 0s;
-	}
-	.logo{
-		font-size:20px;
-	}
-	.gambar{
-		margin-left:3px;
-		width:448px;
-		height:298px;
-	}
-	.isi{
-		margin-left:3px;
-		width:448px;
-		height:930px;
-		padding-left:20px;
-		padding-right:20px;
-	}
-	.kolom{
-		width:170px;
-		height:200px;
-		margin-left:25px;
-		margin-top:15px;
-	}
-	.footer{
-		margin-left:3px;
-		width:446px;
-	}
-	.caption p{
-		display:none;
-	}
-}
-
-		</style>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 	<div class="row">
