--- a/css/index.html
+++ b/css/index.html
@@ -2,7 +2,8 @@
 	<head>
 		<title>Vegetarian</title>
 		<meta name="viewport" content="width=device-width" />
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="shortcut icon" href="image/vegan_icon.ico" />
+		<link rel="stylesheet" href="css/style.css"/>
 	</head>
 	<body>
 	<div class="row">
@@ -26,22 +27,22 @@
 				</div>
 				<div class="isi">
 					<p>Vegetarian adalah sebutan bagi orang yang hanya makan tumbuh-tumbuhan dan tidak mengonsumsi makanan yang berasal dari makhluk hidup seperti daging dan unggas, namun masih mungkin mengonsumsi makanan laut seperti ikan, atau produk olahan hewan seperti telur, keju, atau susu.</p><br>
-					<div class="kolom"><img src="image/lacto.jpg" alt="lacto" title="lacto" width="100%" height="100%">
+					<div class="kolom"><img src="image/lacto.jpg" alt="Lacto" title="Lacto" width="100%" height="100%">
 						<div class="caption"><h3>Lacto Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 					</div>
-					<div class="kolom"><img src="image/ovo2.png" width="100%" height="100%">
+					<div class="kolom"><img src="image/ovo2.png" width="100%" height="100%" alt="ovo" title="ovo">
 						<div class="caption"><h3>Ovo Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 					</div>
-					<div class="kolom"><img src="image/fish.jpg" width="100%" height="100%">
+					<div class="kolom"><img src="image/fish.jpg" width="100%" height="100%" alt="Pasto" title="Pasto">
 						<div class="caption"><h3>Pasto Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 					</div>
-					<div class="kolom"><img src="image/veget1.jpg" width="100%" height="100%">
+					<div class="kolom"><img src="image/veget1.jpg" width="100%" height="100%" alt="Lacto_ovo" title="Lacto_ovo">
 						<div class="caption"><h3>Vegetarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 					</div>
-					<div class="kolom"><img src="image/vegan.jpg" width="100%" height="100%">
+					<div class="kolom"><img src="image/vegan.jpg" width="100%" height="100%" alt="Vegan" title="Vegan">
 						<div class="caption"><h3>Vegan</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 					</div>
-					<div class="kolom"><img src="image/fruit.jpg" width="100%" height="100%">
+					<div class="kolom"><img src="image/fruit.jpg" width="100%" height="100%" alt="Frutarian" title="Frutarian">
 						<div class="caption"><h3>Frutarian</h3><p>Lacto Vegetarian adalah sebutan untuk pemakan susu dan produk olahan nya</p></div>
 					</div>
 				</div>
